<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_order"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_order" />
        <item
            android:id="@+id/my_reward"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_reward" />
        <item
            android:id="@+id/my_cart"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/my_wishlist"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/my_wishlist" />
        <item
            android:id="@+id/my_account"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/my_account" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/facebook" />
        </menu>
    </item>

    <item android:title="Contact us">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/facebook"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/facebook" />
        </menu>
    </item>
</menu>
